--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,18 +6,12 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "beautifulsoup4>=4.13.4",
+    "colorama>=0.4.6",
     "requests>=2.32.3",
     "tqdm>=4.67.1",
 ]
 
 [dependency-groups]
-dev = [
-    "ruff>=0.11.7",
-]
-
-
-[dependency-groups]
-dev = ["pyright>=1.1.394"]
 type = [
     "mypy>=1.15.0",
     "types-colorama>=0.4.15.20240311",
@@ -38,7 +32,7 @@ packages = ["spotifyarchiver"]
 spotify-archiver = "spotifyarchiver:__main__.main"
 
 [tool.uv]
-default-groups = ["dev", "type", "test", "lint"]
+default-groups = ["type", "lint"]
 
 [tool.uv.sources]
 mutagen = { git = "https://github.com/kism/mutagen", branch = "fix-ogg-page-header" } # Fixes: https://github.com/quodlibet/mutagen/issues/591
