--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "myrient-download"
-version = "0.1.0"
+version = "0.2.0"
 description = "Download Files from Myrient"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -8,6 +8,7 @@ dependencies = [
     "beautifulsoup4>=4.13.4",
     "colorama>=0.4.6",
     "requests>=2.32.3",
+    "tomlkit>=0.13.2",
     "tqdm>=4.67.1",
 ]
 
