--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "myrient-download"
+name = "myrientdownload"
 version = "0.2.0"
 description = "Download Files from Myrient"
 readme = "README.md"
@@ -21,6 +21,17 @@ type = [
 ]
 lint = ["ruff>=0.9.7"]
 
+test = [
+    "pytest",
+    "pytest-cov",
+    "pytest-mock",
+    "pytest-random-order",
+    "detect-test-pollution",
+    "tomlkit",
+]
+
+[tool.uv]
+default-groups = ["type", "lint", "test"]
 
 [build-system]
 requires = ["hatchling"]
@@ -33,23 +44,17 @@ packages = ["myrientdownload"]
 [project.scripts]
 myrient-download = "myrientdownload:__main__.main"
 
-[tool.uv]
-default-groups = ["type", "lint"]
-
-[tool.uv.sources]
-mutagen = { git = "https://github.com/kism/mutagen", branch = "fix-ogg-page-header" } # Fixes: https://github.com/quodlibet/mutagen/issues/591
-
 
 [tool.ruff]
 cache-dir = "~/.cache/ruff"
-target-version = "py311"
+target-version = "py312"
 line-length = 120
 
 [tool.ruff.lint]
 extend-fixable = ["B", "I001"] # KG I think this means something...
 extend-unsafe-fixes = [
     "F401",
-] # KG I don't like that this is fixed automatically (this doesn't work?)
+] # KG I don't like that this is fixed automatically (this doesnt work?)
 select = ["ALL"] # KG Include absolutely all of Ruff's rules.
 ignore = [
     # Modules
@@ -57,7 +62,6 @@ ignore = [
     "DTZ", # KG no need to specify timezone for time objects
 
     # Specific rules
-    # "ANN101", # KG Why define self type for object functions...
     "TD002",  # KG Verbose TODO, only I work on this project
     "TD003",  # KG Verbose TODO, only I work on this project
     "ISC001", # KG conflict in the formatter
@@ -74,14 +78,12 @@ ignore = [
 
     # Specific rules
     "S101",    # KG asserts allowed in tests.
-    "ANN201",  # KG Not really needed for pytest.
     "SLF001",  # KG Accessing private members is needed for testing.
     "INP001",  # KG __init__.py not needed for PyTest.
     "PT004",   # KG monkeypatch doesn't return.
     "S311",    # KG I'll assume no real crypto will be done in PyTest.
     "S105",    # KG Hardcoded fake passwords are fine in tests.
     "PLR0913", # KG Tests can have as many arguments as they want.
-    "ANN401",  # KG Tests can return typing.Any.
     "BLE001",  # KG Tests can use BaseException.
 ]
 
@@ -98,16 +100,24 @@ indent-style = "space"
 docstring-code-format = true
 docstring-code-line-length = 40
 
+[tool.pytest.ini_options]
+addopts = [
+    "--cov-context=test",
+    "--cov=myrientdownload",
+    "--cov-report=term",
+    "--cov-report=html",
+]
+testpaths = ["tests"]
 
 [tool.coverage.html]
 show_contexts = true
 
 [tool.mypy]
-files = ["myrientdownload", "tests"]
+files = ["myrientdownload"]
 namespace_packages = true
 explicit_package_bases = true
 show_error_codes = true
-strict = false
+strict = true
 enable_error_code = [
     "ignore-without-code",
     "redundant-expr",
