--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ requires-python = ">=3.12"
 dependencies = [
     "beautifulsoup4>=4.13.4",
     "colorama>=0.4.6",
+    "pydantic>=2.11.4",
+    "pydantic-settings>=2.9.1",
     "requests>=2.32.3",
     "tomlkit>=0.13.2",
     "tqdm>=4.67.1",
