--- a/tests/configs/valid_no_systems.toml
+++ b/tests/configs/valid_no_systems.toml
@@ -1,7 +1,7 @@
 # Configuration file for myrient-download v0.5.3 https://github.com/kism/myrient-download
 [myrient]
-myrinet_url = "https://myrient.erista.me/files"
-myrinet_path = "No-Intro"
+myrient_url = "https://myrient.erista.me/files"
+myrient_path = "No-Intro"
 download_dir = "."
 create_and_use_system_directories = true
 skip_existing = true
