--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
     { name = "Tucker Warlock" },
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = "~=3.12.0"
 dependencies = [
     "beautifulsoup4>=4.13.4",
     "colorama>=0.4.6",
