--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "colorama>=0.4.6",
     "pydantic>=2.11.4",
     "pydantic-settings>=2.9.1",
+    "python-magic>=0.4.27",
     "requests>=2.32.3",
     "tomlkit>=0.13.2",
     "tqdm>=4.67.1",
