--- a/tests/configs/valid_no_systems.toml
+++ b/tests/configs/valid_no_systems.toml
@@ -5,8 +5,7 @@ create_and_use_database_directories = false
 [[myrient_downloader]]
 myrient_url = "https://myrient.erista.me/files"
 myrient_path = "Redump"
-skip_existing = true
-verify_zips = true
+verify_existing_zips = true
 systems = []
 system_disallow_list = []
 game_allow_list = ["(USA)"]
